--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,9 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Curtaily</title>
   </head>
-  <body>
+  <body style="overflow-x: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
